<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/coffee"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp">

        <EditText
            android:backgroundTint="@android:color/white"
            android:id="@+id/customer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/name"
            android:textColorHint="@android:color/white"
            android:inputType="textCapWords" />


        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="24dp"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/whippedCream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HeaderTextStyle"
            android:layout_marginRight="24dp"
            android:paddingLeft="24dp"
            android:text="@string/whippedCream" />
        <CheckBox
            android:id="@+id/chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:paddingLeft="24dp"
            android:text="@string/chocolate"
            style="@style/HeaderTextStyle"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="dec"
                android:text="-"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="0"
                style="@style/HeaderTextStyle" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="inc"
                android:text="+"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <TextView
            android:id="@+id/orderSummaryUpdateID"
            style="@style/HeaderTextStyle"
            android:layout_marginTop="16dp"
            android:text="@string/price" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="$0"
            style="@style/HeaderTextStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textColor="@android:color/white"/>


    </LinearLayout>
</ScrollView>